apps/base/jellyfin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jellyfin
  labels:
    k8s.dimarco-server.site/scrape: "true"
    goldilocks.fairwinds.com/enabled: "true"
